# rugby-game

./: .gitignore  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  constants.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  api.py
backend/app/seed/: __init__.py  cli.py  generator.py
backend/app/services/: career.py  finance.py  game.py  live_match.py  performance.py  progression.py  ratings.py  recruitment.py  selection.py  stats.py  transfers.py
backend/app/simulation/: __init__.py  config.py  engine.py
backend/tests/: conftest.py  helpers.py  test_api.py  test_career.py  test_finance.py  test_live_match.py  test_performance.py  test_progression.py  test_recruitment.py  test_selection.py  test_simulation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ConfirmDialog.tsx  EmptyState.tsx  LoadingPanel.tsx  PageHeader.tsx  SectionCard.tsx  StatCard.tsx  Toast.tsx
frontend/src/layout/: AppShell.tsx
frontend/src/lib/: api.ts  format.ts  insights.ts  types.ts
frontend/src/pages/: ClubOverviewPage.tsx  DashboardPage.tsx  FinancePage.tsx  FixturesPage.tsx  InboxPage.tsx  MatchCentrePage.tsx  NewGamePage.tsx  NewTeamRevealPage.tsx  OffseasonPage.tsx  PerformancePage.tsx  PlayerDetailPage.tsx  SquadPage.tsx  TablePage.tsx  TacticsPage.tsx  TransfersPage.tsx
frontend/src/store/: useGameStore.ts
(+5 files in other folders)
